Update index.html, script.js, and style.css: Revise personal descriptions, enhance project details, and implement Discord link functionality with tooltip and popup. Added styles for Discord tooltip and popup.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="hero">
         <div class="hero-content">
             <h1 class="hero-title" data-translate="welcome">Xandll</h1>
-            <p class="hero-subtitle" data-translate="heroSubtitle">Developer & Linux Enthusiast</p>
+            <p class="hero-subtitle" data-translate="heroSubtitle">Computer Science Student & Linux Enthusiast</p>
             <div class="hero-cta">
                 <a href="#projects" class="cta-button" data-translate="viewProjects">View Projects</a>
                 <a href="#connect" class="cta-button secondary" data-translate="contact">Contact Me</a>
@@ -61,6 +61,7 @@
                         <p>A file server implementation in Python</p>
                         <div class="project-tech">
                             <span>JavaScript</span>
+                            <span>Python</span>
                         </div>
                     </div>
                 </a>
@@ -98,7 +99,7 @@
                 <a href="https://github.com/Xandll/Personenverwaltung" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Personenverwaltung</h3>
-                        <p>A person management system</p>
+                        <p>A person management system for CSV files</p>
                         <div class="project-tech">
                             <span>C</span>
                         </div>
@@ -113,7 +114,7 @@
                 <a href="https://status.xandll.com" target="_blank" class="tool-card">
                     <i class="fas fa-chart-line"></i>
                     <h3 data-translate="statusTitle">Status Monitor</h3>
-                    <p data-translate="statusDesc">Real-time system status monitoring dashboard</p>
+                    <p data-translate="statusDesc">Real-time system status monitoring dashboard (Uptime Kuma)</p>
                 </a>
                 <a href="https://timer.xandll.com" target="_blank" class="tool-card">
                     <i class="fas fa-clock"></i>
@@ -125,7 +126,7 @@
 
         <section id="about" class="fade-in">
             <h2 data-translate="about">About Me</h2>
-            <p data-translate="aboutText">Hi! I'm a developer with a passion for Linux and open-source software. I enjoy building tools that solve real problems and make life easier.</p>
+            <p data-translate="aboutText">Hi! I'm a Computer Science Student with a passion for Linux. I enjoy building tools that solve real problems or just for fun.</p>
         </section>
 
         <section id="skills" class="fade-in">
@@ -173,10 +174,10 @@
                 <a href="https://github.com/Xandll" target="_blank">
                     <i class="fab fa-github"></i>GitHub
                 </a>
-                <a href="https://discord.com/users/Xandll" target="_blank">
+                <a href="#" class="discord-link">
                     <i class="fab fa-discord"></i>Discord
                 </a>
-                <a href="mailto:contact@xandll.com">
+                <a href="mailto:mail@xandll.com">
                     <i class="fas fa-envelope"></i>Email
                 </a>
             </div>
@@ -192,5 +193,20 @@
     </button>
 
     <script src="script.js"></script>
+
+    <div class="discord-popup" id="discordPopup">
+        <div class="discord-popup-content">
+            <span class="close-popup">&times;</span>
+            <div class="discord-info">
+                <div class="discord-username">
+                    <i class="fab fa-discord"></i>
+                    <span>Xandll</span>
+                </div>
+                <a href="https://dc.xandll.com/" class="discord-server-link" target="_blank">
+                    Join Server
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
