Added timeline tags and translated timeline items

--- a/index.html
+++ b/index.html
@@ -151,19 +151,36 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <h3>2024</h3>
-                    <p data-translate="timeline2024">Launched Status Monitor & Timer App</p>
+                    <p data-translate="timeline2024">Advanced JavaScript & C programming, Linux system administration</p>
+                    <div class="timeline-tags">
+                        <span>JavaScript</span>
+                        <span>C</span>
+                        <span>Linux</span>
+                    </div>
                 </div>
                 <div class="timeline-item">
                     <h3>2023</h3>
-                    <p data-translate="timeline2023">Started developing web-based tools</p>
+                    <p data-translate="timeline2023">Advanced HTML/CSS, Introduction to C and Linux fundamentals</p>
+                    <div class="timeline-tags">
+                        <span>HTML/CSS</span>
+                        <span>C</span>
+                        <span>Linux</span>
+                    </div>
                 </div>
                 <div class="timeline-item">
                     <h3>2022</h3>
-                    <p data-translate="timeline2022">Began exploring Linux system administration</p>
+                    <p data-translate="timeline2022">Started learning HTML & CSS at school</p>
+                    <div class="timeline-tags">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                    </div>
                 </div>
                 <div class="timeline-item">
                     <h3>2021</h3>
-                    <p data-translate="timeline2021">First steps in programming</p>
+                    <p data-translate="timeline2021">First steps in programming with Python basics</p>
+                    <div class="timeline-tags">
+                        <span>Python</span>
+                    </div>
                 </div>
             </div>
         </section>
