--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="https://github.com/Xandll/Python-File-Server" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Python File Server</h3>
-                        <p data-translate="fileServerDesc">A file server implementation in Python</p>
+                        <p>A file server implementation in Python</p>
                         <div class="project-tech">
                             <span>JavaScript</span>
                             <span>Python</span>
@@ -68,7 +68,7 @@
                 <a href="https://github.com/Xandll/Xandll" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Xandll</h3>
-                        <p data-translate="websiteDesc">This Website</p>
+                        <p>This Website</p>
                         <div class="project-tech">
                             <span>HTML</span>
                             <span>CSS</span>
@@ -79,7 +79,7 @@
                 <a href="https://github.com/Xandll/Server-Dashboard" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Server Dashboard</h3>
-                        <p data-translate="dashboardDesc">A website for quick access to all Minecraft server Dashboards</p>
+                        <p>A website for quick access to all Minecraft server Dashboards</p>
                         <div class="project-tech">
                             <span>HTML</span>
                         </div>
@@ -88,7 +88,7 @@
                 <a href="https://github.com/Xandll/Minecraft-Server-Website" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Minecraft Server Website</h3>
-                        <p data-translate="mcWebsiteDesc">A website for Minecraft servers</p>
+                        <p>A website for Minecraft servers</p>
                         <div class="project-tech">
                             <span>HTML</span>
                             <span>CSS</span>
@@ -99,7 +99,7 @@
                 <a href="https://github.com/Xandll/Personenverwaltung" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Personenverwaltung</h3>
-                        <p data-translate="personDesc">A person management system for CSV files</p>
+                        <p>A person management system for CSV files</p>
                         <div class="project-tech">
                             <span>C</span>
                         </div>
@@ -113,12 +113,12 @@
             <div class="tools-grid">
                 <a href="https://status.xandll.com" target="_blank" class="tool-card">
                     <i class="fas fa-chart-line"></i>
-                    <h3>Status Monitor</h3>
-                    <p data-translate="statusDesc">Real-time system status monitoring dashboard</p>
+                    <h3 data-translate="statusTitle">Status Monitor</h3>
+                    <p data-translate="statusDesc">Real-time system status monitoring dashboard (Uptime Kuma)</p>
                 </a>
                 <a href="https://timer.xandll.com" target="_blank" class="tool-card">
                     <i class="fas fa-clock"></i>
-                    <h3>Timer App</h3>
+                    <h3 data-translate="timerTitle">Timer App</h3>
                     <p data-translate="timerDesc">Simple and efficient countdown timer</p>
                 </a>
             </div>
@@ -133,7 +133,7 @@
             <h2 data-translate="skills">Skills</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3 data-translate="development">Development</h3>
+                    <h3>Development</h3>
                     <ul>
                         <li><i class="fab fa-html5"></i>HTML</li>
                         <li><i class="fab fa-css3-alt"></i>CSS</li>
@@ -202,12 +202,14 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Xandll</p>
+        <p>&copy; 2024 Xandll. All rights reserved.</p>
     </footer>
 
     <button class="back-to-top">
         <i class="fas fa-arrow-up"></i>
     </button>
+
+    <script src="script.js"></script>
 
     <div class="discord-popup" id="discordPopup">
         <div class="discord-popup-content">
@@ -223,7 +225,5 @@
             </div>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
