added new project

--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
         <section id="projects" class="fade-in">
             <h2 data-translate="projects">Projects</h2>
             <div class="projects-grid">
+                <a href="https://github.com/Xandll/potentastic" target="_blank" class="project-card">
+                    <div class="project-content">
+                        <h3>Potentastic</h3>
+                        <p>Potentastic, a simple way to learn the powers of 2</p>
+                        <div class="project-tech">
+                            <span>JavaScript</span>
+                        </div>
+                    </div>
+                </a>
                 <a href="https://github.com/Xandll/Python-File-Server" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Python File Server</h3>
