--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="https://github.com/Xandll/potentastic" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Potentastic</h3>
-                        <p>Potentastic, a simple way to learn the powers of 2</p>
+                        <p data-translate="potentasticProjDesc">Potentastic, a simple way to learn the powers of 2</p>
                         <div class="project-tech">
                             <span>JavaScript</span>
                         </div>
@@ -66,7 +66,7 @@
                 <a href="https://github.com/Xandll/Python-File-Server" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Python File Server</h3>
-                        <p>A file server implementation in Python</p>
+                        <p data-translate="fileServerProjDesc">A file server implementation in Python</p>
                         <div class="project-tech">
                             <span>JavaScript</span>
                             <span>Python</span>
@@ -76,7 +76,7 @@
                 <a href="https://github.com/Xandll/Xandll" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Xandll</h3>
-                        <p>This Website</p>
+                        <p data-translate="websiteProjDesc">This Website</p>
                         <div class="project-tech">
                             <span>HTML</span>
                             <span>CSS</span>
@@ -87,7 +87,7 @@
                 <a href="https://github.com/Xandll/Server-Dashboard" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Server Dashboard</h3>
-                        <p>A website for quick access to all Minecraft server Dashboards</p>
+                        <p data-translate="dashboardProjDesc">A website for quick access to all Minecraft server Dashboards</p>
                         <div class="project-tech">
                             <span>HTML</span>
                         </div>
@@ -96,7 +96,7 @@
                 <a href="https://github.com/Xandll/Minecraft-Server-Website" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Minecraft Server Website</h3>
-                        <p>A website for Minecraft servers</p>
+                        <p data-translate="mcWebsiteProjDesc">A website for Minecraft servers</p>
                         <div class="project-tech">
                             <span>HTML</span>
                             <span>CSS</span>
@@ -107,7 +107,7 @@
                 <a href="https://github.com/Xandll/Personenverwaltung" target="_blank" class="project-card">
                     <div class="project-content">
                         <h3>Personenverwaltung</h3>
-                        <p>A person management system for CSV files</p>
+                        <p data-translate="personProjDesc">A person management system for CSV files</p>
                         <div class="project-tech">
                             <span>C</span>
                         </div>
@@ -120,9 +120,9 @@
             <h2 data-translate="tools">Tools</h2>
             <div class="tools-grid">
                 <a href="https://status.xandll.com" target="_blank" class="tool-card">
-                    <i class="fas fa-chart-line"></i>
-                    <h3 data-translate="statusTitle">Status Monitor</h3>
-                    <p data-translate="statusDesc">Real-time system status monitoring dashboard (Uptime Kuma)</p>
+                    <i class="fas fa-brain"></i>
+                    <h3 data-translate="statusTitle">Potentastic</h3>
+                    <p data-translate="statusDesc">Potentastic, a simple way to learn the powers of 2</p>
                 </a>
                 <a href="https://timer.xandll.com" target="_blank" class="tool-card">
                     <i class="fas fa-clock"></i>
