changed URL in index.html

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <section id="tools" class="fade-in">
             <h2 data-translate="tools">Tools</h2>
             <div class="tools-grid">
-                <a href="https://status.xandll.com" target="_blank" class="tool-card">
+                <a href="https://potentastic.xandll.com" target="_blank" class="tool-card">
                     <i class="fas fa-brain"></i>
                     <h3 data-translate="statusTitle">Potentastic</h3>
                     <p data-translate="statusDesc">Potentastic, a simple way to learn the powers of 2</p>
