--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 </body>
 
 <footer>
-    <p>&copy; 2024 Xandll. All rights reserved.</p>
+    <p>&copy; 2024-2025 Xandll. All rights reserved.</p>
 </footer>
 
 </html>
